--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -110,7 +110,7 @@ body {
 
 .side-num {
   font-weight: bold;
-  color: rgb(22,22,22);
+  color: rgb(22, 22, 22);
   font-size: 20px;
   margin-left: -10px;
   margin-right: 10px;
@@ -134,4 +134,15 @@ body {
   text-align: center;
   background-color: rgb(56, 60, 62);
   color: white;
+}
+
+.info-main {
+  margin-top: 50px;
+  margin-left: -20px;
+}
+
+.info-title {
+  font-weight: bold;
+  text-align: center;
+  color: rgb(112, 135, 141);
 }
