--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -61,11 +61,16 @@ body {
 
 .main-search {
   width: 300px;
-  margin-left: -20px;
+  margin-left: -20px; 
 }
 
 .search-btn {
   margin-left: -20px;
+}
+
+.result-search {
+  margin-left: 100px;
+  margin-bottom: 25px;
 }
 
 .white-text {
@@ -73,7 +78,7 @@ body {
 }
 
 .result-header {
-  padding-top: 40px;
+  padding-top: 25px;
 }
 
 .result-snippet {
@@ -108,6 +113,22 @@ body {
   color: rgb(52, 75, 81);
 }
 
+sidebar-toggle-title {
+  color: whitesmoke;
+  padding-bottom: 15px;
+  padding-left: 30px;
+} 
+
+.sidebar-load-more {
+  width: 140px;
+  height: 45px;
+  margin-left: 45px;
+  margin-top: 20px;
+  text-align: left;
+  font-size: 14px;
+  color: rgb(52, 75, 81);
+}
+
 .side-num {
   font-weight: bold;
   color: rgb(22, 22, 22);
@@ -122,7 +143,7 @@ body {
 }
 
 .sidebar-whole {
-  margin-top: 75px;
+  margin-top: 85px;
 }
 
 .side-title {
@@ -137,7 +158,7 @@ body {
 }
 
 .info-main {
-  margin-top: 50px;
+  margin-top: 120px;
   margin-left: -20px;
 }
 
