--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -96,11 +96,15 @@ body {
 }
 
 .ace-text-area {
-  font-size: 18px;
+  font-size: 13px;
 }
 
 .result-title {
   margin-bottom: 10px;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .sidebar-btn {
@@ -261,3 +265,13 @@ single-link-container {
   margin-left: 5px;
   padding-left: 10px;
 }
+
+.loading-title {
+  font-size: 20px;
+}
+
+.spinner {
+  width: 500px;
+  height: 500px;
+}
+
